examples/security/network-policy/base/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: noctaya-allow-gateway-to-backend
spec:
  podSelector:
    matchExpressions:
      - key: serving.noctaya.io/runtime
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: serving.noctaya.io/gateway
                operator: Exists
      ports:
        - port: http
          protocol: TCP
