examples/security/network-policy/base/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: noctaya-default-deny-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: noctaya
  policyTypes:
    - Ingress
